5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1595_1017.log
== SUBMITION (2019-04-02 15:09:31) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g2))
print(round(d,2))

-- EXECUTION TIME:
0.149164
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 8
    d = R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1\u2212g2))
                                                         ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:09:39) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = R.arccos((sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g2))
print(round(d,2))

-- EXECUTION TIME:
0.159757
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 8
    d = R.arccos((sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1\u2212g2))
                                                          ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:09:52) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = R.acos((sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g2))
print(round(d,2))

-- EXECUTION TIME:
0.192326
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 8
    d = R.acos((sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1\u2212g2))
                                                        ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:10:29) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = R*acos((sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.185443
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 9
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:10:39) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = r*acos((sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.162059
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 9
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:11:23) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = r*acos((sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.182173
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 9
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:11:26) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = r*acos((sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.147659
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 9
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:11:43) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = r*acos((sin(t1))sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- ERROR:
File "XXXX", line 8
    d = r*acos((sin(t1))sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:11:43) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = r*acos((sin(t1))sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.188069
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 8
    d = r*acos((sin(t1))sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:11:44) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = r*acos((sin(t1))sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.145103
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 8
    d = r*acos((sin(t1))sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:11:45) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = r*acos((sin(t1))sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- ERROR:
File "XXXX", line 8
    d = r*acos((sin(t1))sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:12:08) 
-- CODE:
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
r = 6371.01
d = r*acos((sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.151454
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
